--- a/views/interview.ejs
+++ b/views/interview.ejs
@@ -21,7 +21,7 @@
 </head>
 <body >
 
-<div >
+<div id="mf" class="container">
 
     <div id="top" class="row panel-body ">
         <div id="cameraDiv" class="col-xs-2"></div>
@@ -71,25 +71,25 @@
                     </div>
                 </div>
             </div>
-            <div id="testFaceDiv" class="text-center row col-lg-6 col-lg-offset-3" style="display: none;">
-                <div class="img col-lg-6">
-                    <img id="testFace" width="70%" height="70%"  >
+            <div id="testFaceDiv"  style="display: none;">
+                <div class="img  ">
+                    <img id="testFace"  >
                 </div>
             </div>
         </div>
-        <div id="trackTap" style="display: none"  class="text-center row ">
+        <div id="trackTap" style="display: none;"  class="text-center row ">
             <table class="col-lg-6 col-lg-offset-2">
                 <tr class="row"  >
-                    <td id="td[0]" class="col-xs-3" onclick="hit(0)"></td>
-                    <td id="td[1]" class="col-xs-3" onclick="hit(1)"></td>
+                    <td id="td[0]"  onclick="hit(0)"></td>
+                    <td id="td[1]"  onclick="hit(1)"></td>
                 </tr>
                 <tr  class="row"  >
-                    <td id="td[2]" class="col-xs-3" onclick="hit(2)"></td>
-                    <td id="td[3]" class="col-xs-3" onclick="hit(3)"></td>
+                    <td id="td[2]"  onclick="hit(2)"></td>
+                    <td id="td[3]"  onclick="hit(3)"></td>
                 </tr>
                 <tr  class="row" >
-                    <td id="td[4]" class="col-xs-3" onclick="hit(4)"></td>
-                    <td id="td[5]" class="col-xs-3" onclick="hit(5)"></td>
+                    <td id="td[4]"  onclick="hit(4)"></td>
+                    <td id="td[5]"  onclick="hit(5)"></td>
                 </tr>
             </table>
         </div>
